; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/isa/gus/extr_gus_mem.c_snd_gf1_mem_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/isa/gus/extr_gus_mem.c_snd_gf1_mem_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_gf1_mem = type { i32 }
%struct.snd_gf1_mem_block = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snd_gf1_mem_free(%struct.snd_gf1_mem* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_gf1_mem*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.snd_gf1_mem_block*, align 8
  store %struct.snd_gf1_mem* %0, %struct.snd_gf1_mem** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.snd_gf1_mem*, %struct.snd_gf1_mem** %4, align 8
  %9 = call i32 @snd_gf1_mem_lock(%struct.snd_gf1_mem* %8, i32 0)
  %10 = load %struct.snd_gf1_mem*, %struct.snd_gf1_mem** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call %struct.snd_gf1_mem_block* @snd_gf1_mem_look(%struct.snd_gf1_mem* %10, i32 %11)
  store %struct.snd_gf1_mem_block* %12, %struct.snd_gf1_mem_block** %7, align 8
  %13 = icmp ne %struct.snd_gf1_mem_block* %12, null
  br i1 %13, label %14, label %21

14:                                               ; preds = %2
  %15 = load %struct.snd_gf1_mem*, %struct.snd_gf1_mem** %4, align 8
  %16 = load %struct.snd_gf1_mem_block*, %struct.snd_gf1_mem_block** %7, align 8
  %17 = call i32 @snd_gf1_mem_xfree(%struct.snd_gf1_mem* %15, %struct.snd_gf1_mem_block* %16)
  store i32 %17, i32* %6, align 4
  %18 = load %struct.snd_gf1_mem*, %struct.snd_gf1_mem** %4, align 8
  %19 = call i32 @snd_gf1_mem_lock(%struct.snd_gf1_mem* %18, i32 1)
  %20 = load i32, i32* %6, align 4
  store i32 %20, i32* %3, align 4
  br label %26

21:                                               ; preds = %2
  %22 = load %struct.snd_gf1_mem*, %struct.snd_gf1_mem** %4, align 8
  %23 = call i32 @snd_gf1_mem_lock(%struct.snd_gf1_mem* %22, i32 1)
  %24 = load i32, i32* @EINVAL, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %21, %14
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @snd_gf1_mem_lock(%struct.snd_gf1_mem*, i32) #1

declare dso_local %struct.snd_gf1_mem_block* @snd_gf1_mem_look(%struct.snd_gf1_mem*, i32) #1

declare dso_local i32 @snd_gf1_mem_xfree(%struct.snd_gf1_mem*, %struct.snd_gf1_mem_block*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
